--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "watch": "webpack --watch",
-    "build": "webpack --config ./webpack.config.prod.js",
-    "test": "webpack serve --mode development --env development"
+    "build": "webpack --config ./webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
