--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.2",
+    "jest-module-name-mapper": "^0.1.5",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.2.8",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
